move data to dal

--- a/core/model/pom.xml
+++ b/core/model/pom.xml
@@ -16,4 +16,10 @@
 		</filters>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>ark-common-dal</artifactId>
+		</dependency>
+	</dependencies>
 </project>
