--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,11 @@
 				<artifactId>spring-session</artifactId>
 				<version>1.1.0.BUILD-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
+				<artifactId>ark-common-dal</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
