--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>ark</artifactId>
+		<artifactId>yaen-ark</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>ark-assembly</artifactId>
+	<artifactId>yaen-ark-assembly</artifactId>
 	<packaging>war</packaging>
 	<name>ark-assembly</name>
 
@@ -17,4 +17,10 @@
 		</filters>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-ark-web-home</artifactId>
+		</dependency>
+	</dependencies>
 </project>
