--- a/biz/shared/pom.xml
+++ b/biz/shared/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>ark-biz</artifactId>
+		<artifactId>yaen-ark-biz</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>ark-biz-shared</artifactId>
-	<name>ark-biz-shared</name>
+	<artifactId>yaen-ark-biz-shared</artifactId>
+	<name>yaen-ark-biz-shared</name>
 
 	<build>
 		<filters>
@@ -16,4 +16,18 @@
 		</filters>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-ark-core-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-ark-corecif-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-ark-corerbac-service</artifactId>
+		</dependency>
+	</dependencies>
 </project>
