--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,17 +3,18 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>ark</artifactId>
+		<artifactId>yaen-ark</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>ark-common</artifactId>
+	<artifactId>yaen-ark-common</artifactId>
 	<packaging>pom</packaging>
-	<name>ark-common</name>
+	<name>yaen-ark-common</name>
 	<modules>
 		<module>util</module>
 		<module>dal</module>
 		<module>facade</module>
 		<module>integration</module>
+		
 	</modules>
 </project>
