--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -3,24 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>yaen-ark</artifactId>
+		<artifactId>yaen-starter</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-ark-assembly</artifactId>
-	<packaging>war</packaging>
-	<name>ark-assembly</name>
+	<artifactId>yaen-starter-assembly</artifactId>
+	<packaging>pom</packaging>
+	<name>yaen-starter-assembly</name>
 
-	<build>
-		<filters>
-			<filter>../${env}-config.properties</filter>
-		</filters>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.yaen</groupId>
-			<artifactId>yaen-ark-web-home</artifactId>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>home</module>
+	</modules>
 </project>
