--- a/biz/service/pom.xml
+++ b/biz/service/pom.xml
@@ -7,8 +7,8 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-starter-biz-shared</artifactId>
-	<name>yaen-starter-biz-shared</name>
+	<artifactId>yaen-starter-biz-implement</artifactId>
+	<name>yaen-starter-biz-implement</name>
 
 	<build>
 		<filters>
@@ -19,15 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-core-service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-corecif-service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-corerbac-service</artifactId>
+			<artifactId>yaen-starter-biz-shared</artifactId>
 		</dependency>
 	</dependencies>
 </project>
