--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>yaen-ark</artifactId>
+		<artifactId>yaen-starter</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-ark-common</artifactId>
+	<artifactId>yaen-starter-common</artifactId>
 	<packaging>pom</packaging>
-	<name>yaen-ark-common</name>
+	<name>yaen-starter-common</name>
 	<modules>
 		<module>util</module>
 		<module>dal</module>
