--- a/common/util/pom.xml
+++ b/common/util/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>yaen-ark-common</artifactId>
+		<artifactId>yaen-starter-common</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-ark-common-util</artifactId>
-	<name>yaen-ark-common-util</name>
+	<artifactId>yaen-starter-common-util</artifactId>
+	<name>yaen-starter-common-util</name>
 
 	<build>
 		<filters>
