--- a/corerbac/pom.xml
+++ b/corerbac/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.yaen</groupId>
-		<artifactId>yaen-ark</artifactId>
+		<artifactId>yaen-starter</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-ark-corerbac</artifactId>
+	<artifactId>yaen-starter-corerbac</artifactId>
 	<packaging>pom</packaging>
-	<name>yaen-ark-corerbac</name>
+	<name>yaen-starter-corerbac</name>
 
 	<modules>
 		<module>model</module>
