--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<shiro.version>1.2.3</shiro.version>
 		<guava.version>18.0</guava.version>
 		<poi.version>3.12</poi.version>
-		<lucene.version>4.8.0</lucene.version>
+		<lucene.version>5.0.0</lucene.version>
 		<assertj.version>1.6.1</assertj.version>
 		<freemarker.version>2.3.20</freemarker.version>
 		<junit.version>4.12</junit.version>
@@ -69,9 +69,7 @@
 		<jmagick.version>6.6.9</jmagick.version>
 		<ehcache.version>2.4.3</ehcache.version>
 		<javax-mail.version>1.5.2</javax-mail.version>
-		<json-lib.version>2.4</json-lib.version>
 		<httpclient.version>4.3.4</httpclient.version>
-		<org-json.version>20140107</org-json.version>
 		<dom4j.version>1.6.1</dom4j.version>
 		<org.jdom>1.1.3</org.jdom>
 		<javamail.version>1.4.1</javamail.version>
@@ -365,6 +363,12 @@
 				<artifactId>logback-classic</artifactId>
 				<version>1.1.3</version>
 				<scope>runtime</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<!-- 代码直接调用log4j会被桥接到slf4j -->
 			<dependency>
@@ -469,9 +473,22 @@
 
 			<!-- Test -->
 			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
@@ -496,17 +513,6 @@
 				<artifactId>powermock-api-mockito</artifactId>
 				<version>${powermock.version}</version>
 				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.assertj</groupId>
@@ -568,12 +574,11 @@
 						<groupId>org.jboss.logging</groupId>
 						<artifactId>jboss-logging</artifactId>
 					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+					</exclusion>
 				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.logging</groupId>
-				<artifactId>jboss-logging</artifactId>
-				<version>3.1.1.GA</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.validation</groupId>
@@ -610,7 +615,7 @@
 			<dependency>
 				<groupId>org.apache.lucene</groupId>
 				<artifactId>lucene-facet</artifactId>
-				<version>5.0.0</version>
+				<version>${lucene.version}</version>
 			</dependency>
 
 			<!-- Shiro 管理 start -->
@@ -618,6 +623,12 @@
 				<groupId>org.apache.shiro</groupId>
 				<artifactId>shiro-core</artifactId>
 				<version>${shiro.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.shiro</groupId>
@@ -738,6 +749,12 @@
 				<groupId>org.quartz-scheduler</groupId>
 				<artifactId>quartz</artifactId>
 				<version>${quartz.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>jsptags</groupId>
@@ -786,18 +803,6 @@
 				<groupId>com.sun.mail</groupId>
 				<artifactId>javax.mail</artifactId>
 				<version>${javax-mail.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>net.sf.json-lib</groupId>
-				<artifactId>json-lib</artifactId>
-				<version>${json-lib.version}</version>
-				<classifier>jdk15</classifier>
-			</dependency>
-			<dependency>
-				<groupId>org.json</groupId>
-				<artifactId>json</artifactId>
-				<version>${org-json.version}</version>
 			</dependency>
 
 			<!-- 水印管理 start -->
