--- a/common/facade/pom.xml
+++ b/common/facade/pom.xml
@@ -16,4 +16,10 @@
 		</filters>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-common-data</artifactId>
+		</dependency>
+	</dependencies>
 </project>
