--- a/common/integration/pom.xml
+++ b/common/integration/pom.xml
@@ -21,5 +21,9 @@
 			<groupId>org.yaen</groupId>
 			<artifactId>yaen-starter-common-util</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-common-facade</artifactId>
+		</dependency>
 	</dependencies>
 </project>
