--- a/core/model/pom.xml
+++ b/core/model/pom.xml
@@ -21,5 +21,9 @@
 			<groupId>org.yaen</groupId>
 			<artifactId>yaen-starter-common-dal</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-common-integration</artifactId>
+		</dependency>
 	</dependencies>
 </project>
