--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,26 @@
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-common-facade</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-common-integration</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-common-util</artifactId>
+				<version>${yaen-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-common-dal</artifactId>
+				<version>${yaen-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-core-model</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
@@ -116,27 +136,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-corecif-service</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-corerbac-service</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-biz-mall</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-biz-shared</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-common-dal</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
 			<dependency>
@@ -147,31 +147,6 @@
 			<dependency>
 				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-web-home</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-web-admin</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-web-seller</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-web-front</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-common-util</artifactId>
-				<version>${yaen-starter.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.yaen</groupId>
-				<artifactId>yaen-starter-common-data</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
 
