--- a/local-config.properties
+++ b/local-config.properties
@@ -1,32 +1,27 @@
-# bisic
+# env
 env=local
-system.name=arkcore
+
+# log
 log.dir=d:/logs/arkcore
 log.level=debug
-registry.address=
+
+# dubbo
+dubbo.port=20880
+dubbo.timeOutTime=600000
+registry.address=zookeeper://192.168.188.102:2181
 
 # database
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.188.102:3306/arkcore?amp;useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username=yaen
-jdbc.password=12345678
-jdbc.dialect=MYSQL
-jdbc.dataBaseType=mysql
+jdbc.default.driverClassName=com.mysql.jdbc.Driver
+jdbc.default.url=jdbc:mysql://192.168.188.102:3306/arkcore?useUnicode=true&characterEncoding=utf-8
+jdbc.default.username=yaen
+jdbc.default.password=12345678
+jdbc.default.dialect=MYSQL
+jdbc.default.dataBaseType=mysql
 
 # database pool
-druid.initialSize=1
-druid.maxActive=10
-druid.minIdle=1
-druid.slowSqlMillis=500
-druid.statementExecutableSqlLogEnable=true
-
-# session
-session.redis.host=
-session.redis.port=6379
-session.cookie.name=XLSESSIONID
-session.domain=
-session.path=/
-session.httponly=true
-session.secure=true
-session.maxage=-1
+druid.default.initialSize=1
+druid.default.maxActive=10
+druid.default.minIdle=1
+druid.default.slowSqlMillis=500
+druid.default.statementExecutableSqlLogEnable=true
 
