--- a/pom.xml
+++ b/pom.xml
@@ -393,6 +393,10 @@
 						<artifactId>slf4j-log4j12</artifactId>
 					</exclusion>
 					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+					</exclusion>
+					<exclusion>
 						<groupId>jline</groupId>
 						<artifactId>jline</artifactId>
 					</exclusion>
@@ -504,6 +508,10 @@
 					<exclusion>
 						<artifactId>junit</artifactId>
 						<groupId>junit</groupId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
@@ -950,6 +958,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.xml</include>
+					<include>spring/jdbc-default.properties</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
@@ -965,6 +974,17 @@
 				<filtering>false</filtering>
 			</resource>
 		</resources>
+		<testResources>
+			<!-- test resources with filter -->
+			<testResource>
+				<directory>src/test/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>spring/jdbc-default.properties</include>
+				</includes>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -1066,10 +1086,9 @@
 	<modules>
 		<module>common</module>
 		<module>core</module>
-
-
 		<module>biz</module>
 		<module>web</module>
+		<module>test</module>
 	</modules>
 
 	<distributionManagement>
