--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<properties>
 		<!-- enviourment default to local, related to properties file -->
 		<env>local</env>
+		<yaen-starter.version>1.0.0-SNAPSHOT</yaen-starter.version>
 
 		<!-- jdk version -->
 		<jdk.version>1.8</jdk.version>
@@ -24,7 +25,6 @@
 		<slf4j.version>1.7.12</slf4j.version>
 		<mockito.version>1.10.19</mockito.version>
 		<powermock.version>1.6.2</powermock.version>
-		<yaen-starter.version>1.0.0-SNAPSHOT</yaen-starter.version>
 		<hibernate.validator.version>4.2.0.Final</hibernate.validator.version>
 		<javax.validation.version>1.0.0.GA</javax.validation.version>
 
@@ -69,7 +69,7 @@
 		<jmagick.version>6.6.9</jmagick.version>
 		<ehcache.version>2.4.3</ehcache.version>
 		<javax-mail.version>1.5.2</javax-mail.version>
-		<httpclient.version>4.3.4</httpclient.version>
+		<httpclient.version>4.4.1</httpclient.version>
 		<dom4j.version>1.6.1</dom4j.version>
 		<org.jdom>1.1.3</org.jdom>
 		<javamail.version>1.4.1</javamail.version>
@@ -107,12 +107,12 @@
 			<dependency>
 				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-common-facade</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${yaen-starter.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-common-integration</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${yaen-starter.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
@@ -540,13 +540,6 @@
 				<version>${poi.version}</version>
 			</dependency>
 
-			<!-- http client -->
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient</artifactId>
-				<version>4.4.1</version>
-			</dependency>
-
 			<!-- javax validation -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -617,6 +610,12 @@
 				<groupId>org.apache.shiro</groupId>
 				<artifactId>shiro-cas</artifactId>
 				<version>${shiro.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.shiro</groupId>
@@ -682,12 +681,18 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpcore</artifactId>
-				<version>4.3.2</version>
+				<version>${httpclient.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
@@ -703,6 +708,12 @@
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.0.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<!-- freemarker start -->
@@ -974,17 +985,6 @@
 				<filtering>false</filtering>
 			</resource>
 		</resources>
-		<testResources>
-			<!-- test resources with filter -->
-			<testResource>
-				<directory>src/test/resources</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>spring/jdbc-default.properties</include>
-				</includes>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
