--- a/common/util/pom.xml
+++ b/common/util/pom.xml
@@ -195,6 +195,10 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-facet</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+		</dependency>
 
 		<!-- excel -->
 		<dependency>
