--- a/dev-config.properties
+++ b/dev-config.properties
@@ -1,3 +1,7 @@
+##########################################################
+# for injection settings
+##########################################################
+
 # env
 env=dev
 
@@ -5,23 +9,28 @@ env=dev
 log.dir=d:/logs/arkcore
 log.level=debug
 
+
+##########################################################
+# for config settings
+##########################################################
+
 # dubbo
-dubbo.port=20880
-dubbo.timeOutTime=600000
-registry.address=zookeeper://192.168.188.102:2181
+config.dubbo.port=20880
+config.dubbo.timeOutTime=600000
+config.registry.address=zookeeper://192.168.188.102:2181
 
 # database
-jdbc.default.driverClassName=com.mysql.jdbc.Driver
-jdbc.default.url=jdbc:mysql://192.168.188.102:3306/arkcore?useUnicode=true&characterEncoding=utf-8
-jdbc.default.username=yaen
-jdbc.default.password=12345678
-jdbc.default.dialect=MYSQL
-jdbc.default.dataBaseType=mysql
+config.jdbc.driverClassName=com.mysql.jdbc.Driver
+config.jdbc.url=jdbc:mysql://192.168.188.102:3306/arkcore?useUnicode=true&characterEncoding=utf-8
+config.jdbc.username=yaen
+config.jdbc.password=12345678
+config.jdbc.dialect=MYSQL
+config.jdbc.dataBaseType=mysql
 
 # database pool
-druid.default.initialSize=1
-druid.default.maxActive=10
-druid.default.minIdle=1
-druid.default.slowSqlMillis=500
-druid.default.statementExecutableSqlLogEnable=true
+config.druid.initialSize=1
+config.druid.maxActive=10
+config.druid.minIdle=1
+config.druid.slowSqlMillis=500
+config.druid.statementExecutableSqlLogEnable=true
 
