starter as parent optimized

--- a/dev-config.properties
+++ b/dev-config.properties
@@ -3,34 +3,30 @@
 ##########################################################
 
 # env
-env=dev
+env=local
 
 # log
 log.dir=d:/logs/arkcore
 log.level=debug
 
 
-##########################################################
-# for config settings
-##########################################################
-
 # dubbo
-config.dubbo.port=20880
-config.dubbo.timeOutTime=600000
-config.registry.address=zookeeper://192.168.188.102:2181
+dubbo.port=20880
+dubbo.timeOutTime=600000
+registry.address=zookeeper://192.168.188.102:2181
 
 # database
-config.jdbc.driverClassName=com.mysql.jdbc.Driver
-config.jdbc.url=jdbc:mysql://192.168.188.102:3306/arkcore?useUnicode=true&characterEncoding=utf-8
-config.jdbc.username=yaen
-config.jdbc.password=12345678
-config.jdbc.dialect=MYSQL
-config.jdbc.dataBaseType=mysql
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.188.102:3306/arkcore?amp;useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=yaen
+jdbc.password=12345678
+jdbc.dialect=MYSQL
+jdbc.dataBaseType=mysql
 
 # database pool
-config.druid.initialSize=1
-config.druid.maxActive=10
-config.druid.minIdle=1
-config.druid.slowSqlMillis=500
-config.druid.statementExecutableSqlLogEnable=true
+druid.initialSize=1
+druid.maxActive=10
+druid.minIdle=1
+druid.slowSqlMillis=500
+druid.statementExecutableSqlLogEnable=true
 
