--- a/assembly/home/src/main/webapp/WEB-INF/web.xml
+++ b/assembly/home/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:/spring/web-home.xml</param-value>
+			<param-value>classpath*:/spring/starter-web-home.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
