biz-service rename to biz-implement

--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -12,7 +12,7 @@
 	<name>yaen-starter-biz</name>
 
 	<modules>
-		<module>service</module>
 		<module>shared</module>
+		<module>implement</module>
 	</modules>
 </project>
