--- a/web/home/pom.xml
+++ b/web/home/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-biz-implement</artifactId>
+			<artifactId>yaen-starter-biz-shared</artifactId>
 		</dependency>
 
 		<dependency>
