add wechat model, add redis session support

--- a/pom.xml
+++ b/pom.xml
@@ -159,12 +159,22 @@
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-biz-wechat</artifactId>
+				<version>${yaen-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-biz-implement</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-web-home</artifactId>
+				<version>${yaen-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-web-wechat</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
 
