--- a/local-config.properties
+++ b/local-config.properties
@@ -30,3 +30,13 @@ druid.minIdle=1
 druid.slowSqlMillis=500
 druid.statementExecutableSqlLogEnable=true
 
+# distributed session
+session.max.inactive.interval.in.seconds=1800
+session.redis.host=192.168.188.102
+session.redis.port=6379
+session.cookie.name=STARTERSESSIONID
+session.cookie.domain=
+session.cookie.path=/
+session.cookie.httponly=true
+session.cookie.secure=false
+session.cookie.maxage=-1
