--- a/assembly/pcweb/pom.xml
+++ b/assembly/pcweb/pom.xml
@@ -7,9 +7,9 @@
 		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>yaen-starter-assembly-home</artifactId>
+	<artifactId>yaen-starter-assembly-pcweb</artifactId>
 	<packaging>war</packaging>
-	<name>yaen-starter-assembly-home</name>
+	<name>yaen-starter-assembly-pcweb</name>
 
 	<build>
 		<filters>
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.yaen</groupId>
-			<artifactId>yaen-starter-web-home</artifactId>
+			<artifactId>yaen-starter-web-pcweb</artifactId>
 		</dependency>
 	</dependencies>
 </project>
