--- a/assembly/pcweb/src/main/webapp/WEB-INF/web.xml
+++ b/assembly/pcweb/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,9 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-	<display-name>starter</display-name>
+	<display-name>starter-pcweb</display-name>
 
+	<!-- context config, need scan all components. starter may need special starter-??-*.xml -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
@@ -11,6 +12,7 @@
 			classpath*:/spring/core-*.xml,
 			classpath*:/spring/biz-*.xml,
 			classpath*:/spring/dubbo-*.xml,
+			classpath*:/spring/web-*.xml,
 			<!-- for starter only project, need starter-common-*.xml -->
 			classpath*:/spring/starter-common-*.xml
 			<!-- for starter only project, need starter-dubbo-*.xml -->
@@ -18,10 +20,12 @@
 		</param-value>
 	</context-param>
 
+	<!-- context listener -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+	<!-- encoding filter using UTF-8 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -39,16 +43,18 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- main entrance servlet -->
 	<servlet>
 		<servlet-name>springmvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:/spring/starter-web-home.xml</param-value>
+			<param-value>web-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<!-- servlet mapping, all matched will use servlet to deal with -->
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
 		<url-pattern>/*</url-pattern>
