--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.yaen</groupId>
+				<artifactId>yaen-starter-web-pcweb</artifactId>
+				<version>${yaen-starter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaen</groupId>
 				<artifactId>yaen-starter-web-wechat</artifactId>
 				<version>${yaen-starter.version}</version>
 			</dependency>
