--- a/test/pom.xml
+++ b/test/pom.xml
@@ -14,4 +14,18 @@
 	<modules>
 		<module>test</module>
 	</modules>
+
+	<dependencies>
+
+		<!-- jsp provided -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+		</dependency>
+
+	</dependencies>
 </project>
