--- a/test/test/pom.xml
+++ b/test/test/pom.xml
@@ -22,6 +22,15 @@
 			<artifactId>yaen-starter-biz-implement</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-web-home</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.yaen</groupId>
+			<artifactId>yaen-starter-web-wechat</artifactId>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
